# irgendwas-mit-zellen

./: .gitignore  LICENSE.txt  README.md  RENAME.md  pyproject.toml  requirements.txt
.github/workflows/: sphinx_doc.yml  test.yml
docs/source/: conf.py  index.rst  todo.rst
docs/source/documentation/: dataset.rst  embedding.rst  index.rst  model.rst  plotting.rst  training.rst
irgendwas_mit_zellen/: __init__.py  dataset.py  embedding.py  main.py
