[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irgendwas_mit_zellen"
version = "0.1.0"
authors = [
  { name="Maria Krissmer", email="maria.krissmer@uniklinik-freiburg.de" },
]
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "pytest",
    "sentence-transformers",
    "scanpy",
    "umap",
    "tqdm",
    "scikit-learn",
    "torch",
    "pandas",
    "scipy",
    "biopython",
    "transformers",
]
description = "Optimal experimental design utilizing the Fischer information matrix"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# "Home-page" = "https://github.com/Spatial-Systems-Biology-Freiburg/Model-Design-Fischer-Information-Matrix"
# "Bug Tracker" = "https://github.com/Spatial-Systems-Biology-Freiburg/Model-Design-Fischer-Information-Matrix/issues"
# Documentation = "https://spatial-systems-biology-freiburg.github.io/eDPM/"
# "Source code" = "https://github.com/Spatial-Systems-Biology-Freiburg/eDPM"
